FIX footer items vertical alignment

--- a/precious/main.css
+++ b/precious/main.css
@@ -80,6 +80,10 @@ footer {
     background-color: orange;
 }
 
+footer ul {
+    margin-top: 1em;
+    margin-bottom: 1em;
+}
 footer ul li {
     list-style-type: none;
 }
